<resources>

    <!--Images descriptions-->
    <string name="app_name">Beyond The Canvas</string>
    <string name="logo">BeyondTheCanvasLogo</string>
    <string name="bottom_bar">Bottom bar</string>
    <string name="background">Background</string>

    <!--Place holders for text inputs-->
    <string name="password">Password…</string>
    <string name="username">Username…</string>

    <!-- Fragments buttons text -->
    <string name="login">Login!</string>
    <string name="sign_up">Sign up!</string>
    <string name="repeat_password">Repeat password…</string>
    <string name="email">Email…</string>
    <string name="image_of_the_current_item">Image of the current item</string>
    <string name="undo">Undo</string>
    <string name="send">Send</string>
    <string name="redo">Redo</string>
    <string name="reset">Reset</string>
    <string name="right">right</string>
    <string name="left">Left</string>
    <string name="profiles">Profiles</string>
    <string name="todo">TODO</string>
    <string name="talent_tree_background">Talent Tree Background</string>
    <string name="slot_background">slot background</string>
    <string name="node_image">node image</string>
    <string name="separator_element">Separator Element</string>
    <string name="resources_icon">Resources icon</string>
    <string name="a_dark_overlay">A dark overlay</string>
    <string name="_0">0</string>
    <string name="holder_for_the_resources">Holder for the resources</string>
    <string name="start">Start</string>

</resources>