<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--Background-->
    <ImageView
        android:id="@+id/roomBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/talent_tree_background"
        android:scaleType="centerCrop"
        android:tint="#40000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/talent_tree_background"
        tools:ignore="UseAppTint" />

    <!--Node 0-->
    <ImageView
        android:id="@+id/node0_background"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node0"
        app:layout_constraintBottom_toBottomOf="@+id/node0_background"
        app:layout_constraintEnd_toEndOf="@+id/node0_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node0_background"
        app:layout_constraintTop_toTopOf="@+id/node0_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node0"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 1-->

    <ImageView
        android:id="@+id/node1_background"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/node0_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node1"
        app:layout_constraintBottom_toBottomOf="@+id/node1_background"
        app:layout_constraintEnd_toEndOf="@+id/node1_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node1_background"
        app:layout_constraintTop_toTopOf="@+id/node1_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node1"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 2-->

    <ImageView
        android:id="@+id/node2_background"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintEnd_toEndOf="@+id/roomBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/node0_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node2"
        app:layout_constraintBottom_toBottomOf="@+id/node2_background"
        app:layout_constraintEnd_toEndOf="@+id/node2_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node2_background"
        app:layout_constraintTop_toTopOf="@+id/node2_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node2"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 3-->

    <ImageView
        android:id="@+id/node3_background"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintEnd_toEndOf="@+id/roomBackground"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/node0_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node3"
        app:layout_constraintBottom_toBottomOf="@+id/node3_background"
        app:layout_constraintEnd_toEndOf="@+id/node3_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node3_background"
        app:layout_constraintTop_toTopOf="@+id/node3_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node3"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 4-->

    <ImageView
        android:id="@+id/node4_background"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintStart_toStartOf="@+id/node1_background"
        app:layout_constraintTop_toBottomOf="@+id/node1_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node4"
        app:layout_constraintBottom_toBottomOf="@+id/node4_background"
        app:layout_constraintEnd_toEndOf="@+id/node4_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node4_background"
        app:layout_constraintTop_toTopOf="@+id/node4_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node4"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 5-->

    <ImageView
        android:id="@+id/node5_background"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="45dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintBottom_toTopOf="@+id/node10"
        app:layout_constraintStart_toStartOf="@+id/node2_background"
        app:layout_constraintTop_toBottomOf="@+id/node2_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node5"
        app:layout_constraintBottom_toBottomOf="@+id/node5_background"
        app:layout_constraintEnd_toEndOf="@+id/node5_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node5_background"
        app:layout_constraintTop_toTopOf="@+id/node5_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node5"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 6-->

    <ImageView
        android:id="@+id/node6_background"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintBottom_toTopOf="@+id/node10"
        app:layout_constraintEnd_toEndOf="@+id/node2_background"
        app:layout_constraintTop_toBottomOf="@+id/node2_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node6"
        app:layout_constraintBottom_toBottomOf="@+id/node6_background"
        app:layout_constraintEnd_toEndOf="@+id/node6_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node6_background"
        app:layout_constraintTop_toTopOf="@+id/node6_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node6"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 7-->

    <ImageView
        android:id="@+id/node7_background"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintEnd_toEndOf="@+id/node3_background"
        app:layout_constraintTop_toBottomOf="@+id/node3_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node7"
        app:layout_constraintBottom_toBottomOf="@+id/node7_background"
        app:layout_constraintEnd_toEndOf="@+id/node7_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node7_background"
        app:layout_constraintTop_toTopOf="@+id/node7_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node7"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 8-->

    <ImageView
        android:id="@+id/node8_background"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintBottom_toTopOf="@+id/node10"
        app:layout_constraintStart_toStartOf="@+id/node4_background"
        app:layout_constraintTop_toBottomOf="@+id/node4_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node8"
        app:layout_constraintBottom_toBottomOf="@+id/node8_background"
        app:layout_constraintEnd_toEndOf="@+id/node8_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node8_background"
        app:layout_constraintTop_toTopOf="@+id/node8_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node8"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 9-->

    <ImageView
        android:id="@+id/node9_background"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintBottom_toTopOf="@+id/node10_background"
        app:layout_constraintEnd_toEndOf="@+id/node7_background"
        app:layout_constraintTop_toBottomOf="@+id/node7_background"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node9"
        app:layout_constraintBottom_toBottomOf="@+id/node9_background"
        app:layout_constraintEnd_toEndOf="@+id/node9_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node9_background"
        app:layout_constraintTop_toTopOf="@+id/node9_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node9"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <!--Node 10-->

    <ImageView
        android:id="@+id/node10_background"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/slot_background"
        app:layout_constraintBottom_toBottomOf="@+id/roomBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/node_slot"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/node10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/node_image"
        android:focusable="true"
        android:onClick="selectedTreeNode"
        android:tag="node10"
        app:layout_constraintBottom_toBottomOf="@+id/node10_background"
        app:layout_constraintEnd_toEndOf="@+id/node10_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/node10_background"
        app:layout_constraintTop_toTopOf="@+id/node10_background"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/node10"
        tools:ignore="UsingOnClickInXml" />
    <!--||||| -->

    <ImageView
        android:id="@+id/darkOverlay"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:tint="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_square"
        tools:ignore="MissingConstraints,UseAppTint" />

    <ProgressBar
        android:id="@+id/progressCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:minWidth="120dp"
        android:minHeight="120dp"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/roomBackground"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>